[gd_scene load_steps=9 format=3 uid="uid://vhjco0eclddd"]

[ext_resource type="Script" path="res://scenes/maps/RoomHeart/heart_piece.gd" id="1_nksqx"]
[ext_resource type="Texture2D" uid="uid://d3iqs6hcie7pb" path="res://resource/map/pois.png" id="1_oyvqv"]
[ext_resource type="PackedScene" uid="uid://ct2rxkgn055lv" path="res://scenes/maps/pois/Key.tscn" id="2_ub1t7"]
[ext_resource type="Script" path="res://scenes/maps/RoomHeart/room_heart.gd" id="3_qown3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qk262"]
radius = 47.0106

[sub_resource type="AtlasTexture" id="AtlasTexture_c7l17"]
atlas = ExtResource("1_oyvqv")
region = Rect2(46, 89, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xidb5"]
atlas = ExtResource("1_oyvqv")
region = Rect2(48, 206, 66, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbnxn"]
atlas = ExtResource("1_oyvqv")
region = Rect2(168, 220, 55, 34)

[node name="RoomHeart" type="Node2D"]
script = ExtResource("3_qown3")

[node name="HeartDestination" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeartDestination"]
shape = SubResource("CircleShape2D_qk262")

[node name="HeartPiece1" type="RigidBody2D" parent="."]
position = Vector2(-52, -48)
collision_layer = 256
collision_mask = 3
gravity_scale = 0.0
inertia = 5.0
lock_rotation = true
linear_damp = 50.0
script = ExtResource("1_nksqx")
spot = "left"
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="HeartPiece1"]
texture = SubResource("AtlasTexture_c7l17")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HeartPiece1"]
polygon = PackedVector2Array(17, -24, 26, -6, 19, 4, 32, 16, 24, 20, 18, 17, 16, 27, 7, 21, 7, 24, 0, 32, -26, 9, -27, 5, -30, 2, -32, -11, -25, -25, -13, -32, 8, -30)

[node name="HeartPiece2" type="RigidBody2D" parent="."]
position = Vector2(52, -49)
collision_layer = 256
collision_mask = 3
gravity_scale = 0.0
inertia = 5.0
lock_rotation = true
linear_damp = 50.0
script = ExtResource("1_nksqx")
spot = "right"
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="HeartPiece2"]
texture = SubResource("AtlasTexture_xidb5")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HeartPiece2"]
polygon = PackedVector2Array(-33, 5, -23, -6, -15, -24, 3, -31, 18, -30, 28, -22, 33, -10, 28, 10, 5, 31, 1, 21, -6, 28, -14, 17, -22, 23, -27, 22, -19, 16)

[node name="HeartPiece3" type="RigidBody2D" parent="."]
position = Vector2(3, 21)
collision_layer = 256
collision_mask = 3
gravity_scale = 0.0
inertia = 5.0
lock_rotation = true
linear_damp = 50.0
script = ExtResource("1_nksqx")
spot = "bottom"
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="HeartPiece3"]
texture = SubResource("AtlasTexture_nbnxn")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HeartPiece3"]
polygon = PackedVector2Array(-19, -12, -11, -6, -9, -17, 3, -10, 10, -17, 18, -5, 25, -12, 28, -6, 27, -3, 6, 16, -1, 16, -8, 16, -27, -2)

[node name="KeyRed" parent="." instance=ExtResource("2_ub1t7")]
position = Vector2(0, -134)
metadata/_edit_group_ = true

[node name="CollisionPolygon2D" parent="KeyRed" index="1"]
disabled = true

[connection signal="body_entered" from="HeartDestination" to="." method="_on_heart_destination_body_entered"]

[editable path="KeyRed"]
